--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   },
   "devDependencies": {
     "@iconify-json/ant-design": "^1.2.5",
+    "@iconify-json/fa": "^1.2.2",
+    "@iconify-json/logos": "^1.2.9",
     "@iconify-json/ri": "^1.2.6",
+    "@iconify-json/si": "^1.2.13",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.18.11",
